tests/baselines/reference/parserX_ArrowFunction1.errors.txt
parserX_ArrowFunction1.ts(1,13): error TS1110: Type expected.


==== parserX_ArrowFunction1.ts (1 errors) ====
    var v = (a: ) => {
                ~
!!! error TS1110: Type expected.
       
    };